--- a/src/diagram/new-diagram.html
+++ b/src/diagram/new-diagram.html
@@ -1,12 +1,12 @@
 <div class="modal-header">
   <button type="button" class="close" data-dismiss="modal">&times;</button>
-  <h4 class="modal-title">Create a New Diagram</h4>
+  <h4 class="modal-title">Create New Pipeline</h4>
 </div>
 <div class="modal-body">
-  <p>This will clear the current diagram. Unsaved work will be lost.</p>
+  <p>This will clear the current pipeline. Unsaved work will be lost.</p>
   <p>Are you sure?</p>
 </div>
 <div class="modal-footer">
   <button class="btn btn-default" data-dismiss="modal">Cancel</button>
-  <button id="confirm" class="btn btn-primary" data-dismiss="modal">Create New Diagram</button>
+  <button id="confirm" class="btn btn-primary" data-dismiss="modal">Create New Pipeline</button>
 </div>
