--- a/src/welcome/welcome.html
+++ b/src/welcome/welcome.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <button type="button" class="close" data-dismiss="modal">&times;</button>
-  <h4 class="modal-title">Welcome to VisFlow</h4>
+  <h4 class="modal-title">Welcome to VisFlow (D3M TA3)</h4>
 </div>
 <div class="modal-body">
   <div id="is-mobile">
@@ -10,6 +10,7 @@
   <div class="section">
     VisFlow is a web-based framework for interactive visualization of tabular data, based on the
     <a href="./doc.html#flow-diagram">subset flow model</a>.
+    This version of VisFlow has been extended as DARPA D3M TA3 system.
   </div>
   <div class="section separated">
     <ul class="nav">
