gRPC defs for basic CreatePipelines

--- a/src/panel/popup-panel/popup-panel-compact.html
+++ b/src/panel/popup-panel/popup-panel-compact.html
@@ -60,11 +60,9 @@
     <img class="flat-icon" src="imgs/minus-icon.svg"/>
   </div>
 </div>
-<!--
 <div class="group">
   <hr>
-  <div id="identity" class="panel-button" title="Identity" data-placement="right">
+  <div id="module" class="panel-button" title="Module" data-placement="right">
     <img class="flat-icon" src="imgs/computation-icon.svg"/>
   </div>
 </div>
--->
