--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <li id="task" class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown">Task<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a id="new"><i class="glyphicon glyphicon-pencil"></i>New</a></li>
+            <li><a id="new"><i class="glyphicon glyphicon-pencil"></i>New<span class="hotkey">( CTRL + N )</a></li>
           </ul>
         </li>
         <li id="diagram" class="dropdown">
