--- a/src/panel/node-panel/node-panel.html
+++ b/src/panel/node-panel/node-panel.html
@@ -56,8 +56,6 @@
   <img class="flat-icon" src="imgs/minus-icon.svg"/>
 </div>
 <!-- computation nodes -->
-<!--
-<div id="identity" class="panel-button" title="Identity" data-placement="right">
+<div id="module" class="panel-button" title="Module" data-placement="right">
   <img class="flat-icon" src="imgs/computation-icon.svg"/>
 </div>
--->
