--- a/src/panel/pipeline-panel/pipeline-panel.html
+++ b/src/panel/pipeline-panel/pipeline-panel.html
@@ -1,8 +1,11 @@
-<div>
-  <label>TASK:</label>
-  <span>No Task Specified</span>
+<div class="header">
+  <label>Current Task</label>
+  <span class="task">No Task Specified</span>
 </div>
-<table class="table table-striped table-bordered" width="100%">
-  <thead></thead>
-  <tbody></tbody>
-</table>
+<div class="table-container">
+  <table class="table table-striped table-bordered" width="100%">
+    <thead></thead>
+    <tbody></tbody>
+  </table>
+</div>
+
