highlight subsetizable ports

--- a/src/panel/pipeline-panel/pipeline-panel.html
+++ b/src/panel/pipeline-panel/pipeline-panel.html
@@ -1,6 +1,7 @@
 <div class="header">
   <label>Current Task</label>
   <span class="task">No Task Specified</span>
+  <button id="explore" class="btn btn-default">Explore Pipelines Results</button>
 </div>
 <div class="table-container">
   <table class="table table-striped table-bordered" width="100%">
@@ -8,4 +9,3 @@
     <tbody></tbody>
   </table>
 </div>
-
