--- a/src/node/node.html
+++ b/src/node/node.html
@@ -6,6 +6,6 @@
 <div class="background"></div>
 <div class="content"></div>
 <div class="icon"></div>
-<div class="progress" class="progress">
-  <div class="progress-bar" role="progressbar" style="width:25%"></div>
+<div class="progress" class="progress" style="display: none">
+  <div class="progress-bar" role="progressbar" style="width: 0%"></div>
 </div>
