WIP explore data

--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
   </div>
   <div id="popup-panel" class="popup-panel" style="display: none;"></div>
   <div id="tool-panel" class="tool-panel">
+    <button id="pipeline" class="btn btn-default btn-xs to-tooltip active" title="Pipeline Mode" data-placement="left">
+      <i class="glyphicon glyphicon-blackboard"></i>
+    </button>
     <button id="alted" class="btn btn-default btn-xs to-tooltip" title="Dragging Mode" data-placement="left">
       <i class="glyphicon glyphicon-move"></i>
     </button>
