--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
           </ul>
         </li>
         <li id="diagram" class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown">Pipeline <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown">Diagram <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a id="new"><i class="glyphicon glyphicon-file"></i>New<span class="hotkey">( CTRL + E )</span></a></li>
-            <li><a id="save"><i class="glyphicon glyphicon-floppy-disk"></i>Save<span class="hotkey">( CTRL + S )</span></a></li>
+            <li><a id="save" class="disabled"><i class="glyphicon glyphicon-floppy-disk"></i>Save<span class="hotkey">( CTRL + S )</span></a></li>
             <li><a id="load"><i class="glyphicon glyphicon-folder-open"></i>Load<span class="hotkey">( CTRL + L )</span></a></li>
           </ul>
         </li>
