--- a/src/panel/pipeline-panel/pipeline-panel.html
+++ b/src/panel/pipeline-panel/pipeline-panel.html
@@ -1,7 +1,10 @@
 <div class="header">
   <label>Current Task</label>
   <span class="task">No Task Specified</span>
-  <button id="explore" class="btn btn-default">Explore Pipelines Results</button>
+  <div class="float-right">
+    <button id="explore" class="btn btn-default">Explore Pipelines Results</button>
+    <button id="export" class="btn btn-default">Export</button>
+  </div>
 </div>
 <div class="table-container">
   <table class="table table-striped table-bordered" width="100%">
