--- a/src/diagram/new-diagram.html
+++ b/src/diagram/new-diagram.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <button type="button" class="close" data-dismiss="modal">&times;</button>
-  <h4 class="modal-title">Create New Pipeline</h4>
+  <h4 class="modal-title">Create New Diagram</h4>
 </div>
 <div class="modal-body">
   <p>This will clear the current pipeline. Unsaved work will be lost.</p>
@@ -8,5 +8,5 @@
 </div>
 <div class="modal-footer">
   <button class="btn btn-default" data-dismiss="modal">Cancel</button>
-  <button id="confirm" class="btn btn-primary" data-dismiss="modal">Create New Pipeline</button>
+  <button id="confirm" class="btn btn-primary" data-dismiss="modal">Create New Diagram</button>
 </div>
