new task from config file

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <a class="dropdown-toggle" data-toggle="dropdown">Task<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a id="new"><i class="glyphicon glyphicon-pencil"></i>New<span class="hotkey">( CTRL + N )</a></li>
+            <li><a id="new-config"><i class="glyphicon glyphicon-open-file"></i>New From Config</a></li>
           </ul>
         </li>
         <li id="diagram" class="dropdown">
