--- a/src/panel/pipeline-panel/pipeline-panel.html
+++ b/src/panel/pipeline-panel/pipeline-panel.html
@@ -1,10 +1,18 @@
 <div class="header">
   <label>Current Task</label>
   <span class="task">No Task Specified</span>
+  <!--
   <div class="float-right">
     <button id="explore" class="btn btn-default">Explore Pipelines Results</button>
     <button id="export" class="btn btn-default">Export</button>
   </div>
+  -->
+  <button class="float-right btn btn-default dropdown-toggle" data-toggle="dropdown">
+    <i class="glyphicon glyphicon-option-horizontal"></i></button>
+  <ul id="pipeline" class="dropdown-menu">
+    <li><a href="#" id="explore">Explore Pipeline Metrics</a></li>
+    <li><a href="#" id="export">Export Pipeline</a></li>
+  </ul>
 </div>
 <div class="table-container">
   <table class="table table-striped table-bordered" width="100%">
