visualize predict results

--- a/src/panel/pipeline-panel/pipeline-panel.html
+++ b/src/panel/pipeline-panel/pipeline-panel.html
@@ -10,7 +10,9 @@
   <button class="float-right btn btn-default dropdown-toggle" data-toggle="dropdown">
     <i class="glyphicon glyphicon-option-horizontal"></i></button>
   <ul id="pipeline" class="dropdown-menu">
-    <li><a href="#" id="explore">Explore Pipeline Metrics</a></li>
+    <li><a href="#" id="explore">Explore Pipeline List</a></li>
+    <li><a href="#" id="data">Explore Input Data</a></li>
+    <li><a href="#" id="result">Explore Pipeline Result</a></li>
     <li><a href="#" id="export">Export Pipeline</a></li>
   </ul>
 </div>
