--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <li id="task" class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown">Task<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a id="new"><i class="glyphicon glyphicon-pencil"></i>New<span class="hotkey">( CTRL + N )</a></li>
-            <li><a id="new-config"><i class="glyphicon glyphicon-open-file"></i>New From Config</a></li>
+            <li><a id="new"><i class="glyphicon glyphicon-pencil"></i>New<span class="hotkey">( CTRL + N )</span></a></li>
+            <li><a id="new-config"><i class="glyphicon glyphicon-open-file"></i>New From Config<span class="hotkey">( CTRL + G )</span></a></li>
           </ul>
         </li>
         <li id="diagram" class="dropdown">
@@ -164,7 +164,7 @@
   <div id="popup-panel" class="popup-panel" style="display: none;"></div>
   <div id="tool-panel" class="tool-panel">
     <button id="pipeline" class="btn btn-default btn-xs to-tooltip active" title="Pipeline Mode" data-placement="left">
-      <i class="glyphicon glyphicon-blackboard"></i>
+      <i class="glyphicon glyphicon-tasks"></i>
     </button>
     <button id="alted" class="btn btn-default btn-xs to-tooltip" title="Dragging Mode" data-placement="left">
       <i class="glyphicon glyphicon-move"></i>
