system exit; executables root

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <ul class="dropdown-menu">
             <li><a id="new"><i class="glyphicon glyphicon-pencil"></i>New<span class="hotkey">( CTRL + N )</span></a></li>
             <li><a id="new-config"><i class="glyphicon glyphicon-open-file"></i>New From Config<span class="hotkey">( CTRL + G )</span></a></li>
+            <li><a id="exit"><i class="glyphicon glyphicon-off"></i>Exit</a></li>
           </ul>
         </li>
         <li id="diagram" class="dropdown">
