show instruction and start links in welcome modal

--- a/src/welcome/welcome.html
+++ b/src/welcome/welcome.html
@@ -11,9 +11,17 @@
     VisFlow is a web-based framework for interactive visualization of tabular data, based on the
     <a href="./doc.html#flow-diagram">subset flow model</a>.
     This version of VisFlow has been extended as DARPA D3M TA3 system.
+    Please read the D3M Instruction before start.
   </div>
   <div class="section separated">
     <ul class="nav">
+      <li><a id="instruction" href="#">
+        <i class="glyphicon glyphicon-chevron-right"></i>D3M Instruction</a>
+      </li>
+      <li><a id="start" href="#">
+        <i class="glyphicon glyphicon-chevron-right"></i>Start</a>
+      </li>
+      <!--
       <li><a id="get-started" href="#">
         <i class="glyphicon glyphicon-chevron-right"></i>Getting Started</a>
       </li>
@@ -24,9 +32,12 @@
         <i class="glyphicon glyphicon-chevron-right"></i>Sign In</a></li>
       <li><a id="try-demo" href="#">
         <i class="glyphicon glyphicon-chevron-right"></i>Try Demo</a></li>
+        -->
     </ul>
   </div>
 </div>
-<div class="modal-footer">
+<!--
+  <div class="modal-footer">
   <button id="confirm" class="btn btn-primary" data-dismiss="modal">Start</button>
 </div>
+-->
